--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@angular/platform-browser-dynamic": "~8.2.14",
     "@angular/router": "~8.2.14",
     "@ng-bootstrap/ng-bootstrap": "^6.0.3",
+    "@okta/okta-angular": "^2.0.0",
     "@rxweb/reactive-form-validators": "^1.9.9-beta4",
     "angular-intl-tel-input": "0.0.9",
     "bootstrap": "^4.4.1",
@@ -41,6 +42,7 @@
     "popper.js": "^1.16.1",
     "roboto-fontface": "^0.10.0",
     "rxjs": "~6.4.0",
+    "rxjs-compat": "^6.5.5",
     "tslib": "^1.10.0",
     "zone.js": "~0.9.1"
   },
